--- a/Assignment 1.html
+++ b/Assignment 1.html
@@ -116,7 +116,7 @@
                 <i style="font-size:24px" class="fa">&#xf099;</i>
             </div>
             <div class="footerdown">
-                PRIVACY STATEMENTS | TERMS OF SERVICE | RETURNS
+                <u>PRIVACY STATEMENTS</u> | <u>TERMS OF SERVICE</u> | <u>RETURNS</u>
                 <br>
                 &copy 2012 Mern. All Rights Reserved.
                 <br>
